[package]
name = "speedtest"
version = "0.1.1"
authors = ["韩朴宇 <w12101111@gmail.com>","Zach Peters <zpeters@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
log = "0.4"
env_logger = "0.7"
